# demo-qt-webchannel

./: CMakeLists.txt  demo-qt-webchannel.qrc  index.html  mainwindow.cpp
